--- a/src/xterm_customize.css
+++ b/src/xterm_customize.css
@@ -1,3 +1,9 @@
+.xterm {
+    position: absolute !important;
+    width: 100%;
+    height: 100%;
+}
+
 .terminal {
     font-family: "DejaVu Sans Mono", "Everson Mono", FreeMono, Menlo, Terminal, monospace, "Apple Symbols";
 }
