--- a/static/index.css
+++ b/static/index.css
@@ -1,6 +1,22 @@
-html, body, #terminal {
+html {
     background: black;
-    height: 100%;
+    height: 100vh;
+    width: 100%;
+    padding: 0%;
+    margin: 0%;
+}
+
+body {
+    background: black;
+    height: 100vh;
+    width: 100%;
+    padding: 0%;
+    margin: 0%;
+}
+
+#terminal {
+    background: black;
+    height: 100vh;
     width: 100%;
     padding: 0%;
     margin: 0%;
