--- a/static/index.css
+++ b/static/index.css
@@ -1,6 +1,6 @@
 html {
     background: black;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     padding: 0%;
     margin: 0%;
@@ -8,7 +8,7 @@ html {
 
 body {
     background: black;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     padding: 0%;
     margin: 0%;
@@ -16,7 +16,7 @@ body {
 
 #terminal {
     background: black;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     padding: 0%;
     margin: 0%;
